@@ -3,6 +3,10 @@
 o Performed a bunch of OS fingerprint text canonicalization thanks to
   reports of dozens of capitalization inconsistencies from Suicidal Bob.
 
+o Fixed an output bug on systems like Windows which return -1 when
+  vsnprintf is passed a too-small buffer rather than returning the
+  size needed.  Thanks to jah (jah(a)zadkiel.plus.com) for the report.
+
 4.22SOC2
 
 o NSE compilation fixes by Stoiko and Kris
